@@ -2,6 +2,7 @@
 - fixed failure to load correct catalogs without error message
 - fixed loading of X-Poedit-Language header (#1567018)
 - fixed loading of files in charsets other than UTF-8 (#1562780)
+- fixed shortcuts on Mac OS X to not use Alt+something
 
 
 Version 1.3.5
